[package]
name = "fastlem-random-terrain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastlem = "0.1.4"
noise = "0.8.2"
terrain-graph = "1.0.1"
image = "0.24.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4.18", features = ["derive"] }
